# trapezia-skill-validator

./: CHANGELOG.md  README.md  pyproject.toml
docs/superpowers/plans/: 2026-05-31-trapezia-skill-validator.md
src/trapezia_skill_validator/: __init__.py  cli.py  context.py  frontmatter.py  models.py  patterns.py  registry.py  runner.py  tiers.py  walk.py
src/trapezia_skill_validator/checks/: __init__.py  data.py  structure.py
src/trapezia_skill_validator/data/: sensitive_patterns.toml
tests/: conftest.py  test_checks_data.py  test_checks_structure.py  test_cli.py  test_frontmatter.py  test_models.py  test_patterns.py  test_runner.py  test_tiers.py
