[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "trapezia-skill-validator"
version = "0.0.0"
description = "Deterministic conformance checks for Trapezia skills."
requires-python = ">=3.13"
dependencies = ["pyyaml>=6.0"]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.scripts]
trapezia-skill-validator = "trapezia_skill_validator.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
trapezia_skill_validator = ["data/*.toml"]
